--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\MTDS.Model\packages.config" />
+  <repository path="..\MTDS.Web\packages.config" />
   <repository path="..\MTDS\packages.config" />
 </repositories>
