--- a/MTDS.Web/MTDS.Web.csproj
+++ b/MTDS.Web/MTDS.Web.csproj
@@ -408,7 +408,6 @@
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\bootstrapValidator.css" />
-    <Content Include="css\CAInfo.css" />
     <Content Include="css\default.css" />
     <Content Include="css\header.css" />
     <Content Include="css\Info.css" />
@@ -460,6 +459,7 @@
     <Content Include="assets\lineicons\fonts\linecons.ttf" />
     <Content Include="assets\lineicons\fonts\linecons.woff" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="images\1.png" />
     <Content Include="images\air-balloon-1.png" />
     <Content Include="images\air-balloon-2.png" />
     <Content Include="images\login-bg.jpg" />
@@ -581,6 +581,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
