--- a/MTDS.Web/MTDS.Web.csproj
+++ b/MTDS.Web/MTDS.Web.csproj
@@ -182,6 +182,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -563,7 +565,6 @@
     <Content Include="images\orderedList8.png" />
     <Content Include="images\orderedList9.png" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -575,6 +576,8 @@
     <Content Include="Views\Shared\_Foot.cshtml" />
     <Content Include="Views\Shared\_Left.cshtml" />
     <Content Include="Views\Shared\_Header.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -584,6 +587,16 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MTDS.Common\MTDS.Common.csproj">
+      <Project>{d9ac5183-cc6f-4abc-9a01-0a6f5e8bbdcf}</Project>
+      <Name>MTDS.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MTDS.Model\MTDS.Model.csproj">
+      <Project>{e4e61ef9-1826-482c-aa5d-00f124dfe9b9}</Project>
+      <Name>MTDS.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
