--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # Build results
 [Dd]ebug/
+[Bd]in/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
@@ -25,3 +26,7 @@ bld/
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the
+*.cache
+
+*.pdb
+*.txt
