--- a/MTDS.Web/Views/Web.config
+++ b/MTDS.Web/Views/Web.config
@@ -8,6 +8,11 @@
     </sectionGroup>
   </configSections>
 
+  <connectionStrings>
+    <add name="PlatformConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MTDS;UID=sa;password=123456;"/>
+  </connectionStrings>
+
+
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
