--- a/MTDS.Model/MTDS.Model.csproj
+++ b/MTDS.Model/MTDS.Model.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asset.cs" />
+    <Compile Include="AssetProperty.cs" />
     <Compile Include="AssetType.cs" />
     <Compile Include="BillColumns.cs" />
     <Compile Include="BillComments.cs" />
