--- a/MTDS.Dal/MTDS.Dal.csproj
+++ b/MTDS.Dal/MTDS.Dal.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AreaDal.cs" />
     <Compile Include="DapperHelper.cs" />
     <Compile Include="UserDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
