--- a/MTDS.BLL/MTDS.BLL.csproj
+++ b/MTDS.BLL/MTDS.BLL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaBll.cs" />
+    <Compile Include="AssetPropertyBll.cs" />
     <Compile Include="UserBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
